crates/sotf-plugins/tests/snapshots/render_plan_snapshots__ambisonics__ambisonics__desktop_800.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "ambisonics_decoder",
  "width": 800.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "md",
  "group_direction": "row",
  "slider_height": 180.0,
  "show_visualizations": true,
  "columns_visible": [
    "main"
  ],
  "columns_collapsed": [],
  "visible_group_ids": [
    "primary"
  ],
  "overflow_group_ids": [],
  "config_controls": [
    {
      "param_index": 0,
      "param_name": "Order",
      "control_type": "knob",
      "unit": "",
      "range": [
        1.0,
        7.0
      ],
      "read_only": false,
      "enabled": true
    },
    {
      "param_index": 1,
      "param_name": "Target Layout",
      "control_type": "selector",
      "unit": "",
      "range": [
        0.0,
        8.0
      ],
      "read_only": false,
      "enabled": true
    },
    {
      "param_index": 4,
      "param_name": "Algorithm",
      "control_type": "selector",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false,
      "enabled": true
    }
  ],
  "main_groups": [
    {
      "id": "primary",
      "title": "",
      "controls": [
        {
          "param_index": 2,
          "param_name": "Max-rE",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 3,
          "param_name": "Dual-Band",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    }
  ],
  "output_controls": [],
  "tabs": [],
  "viz_slots": [],
  "dynamic_sections": []
}
